--- a/package.json
+++ b/package.json
@@ -42,8 +42,6 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "dotenv": "^8.2.0"
   }
 }
