--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
     "@okta/okta-react": "^3.0.1",
     "@okta/okta-signin-widget": "^4.1.1",
     "@testing-library/jest-dom": "^4.2.4",
