--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "buildpacks": [
     {
-      "url": "https://github.com/heroku/heroku-buildpack-nodejs"
+      "url": "heroku/nodejs"
     },
     {
-      "url": "https://github.com/mars/create-react-app-buildpack.git"
+      "url": "mars/create-react-app-buildpack"
     }
   ]
 }
